--- a/Homepage CSS/hero.css
+++ b/Homepage CSS/hero.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1100px;
   width: 100%;
   gap: 50px;
 }
